--- a/renovate.json
+++ b/renovate.json
@@ -4,26 +4,37 @@
   "dependencyDashboard": true,
   "dependencyDashboardAutoclose": false,
   "rangeStrategy": "pin",
+  "constraints": {
+    "node": "14"
+  },
+  "postUpgradeTasks": {
+    "commands": ["npm install --package-lock-only"],
+    "fileFilters": ["package-lock.json"],
+    "executionMode": "update"
+  },
   "packageRules": [
     {
       "description": "Beta branch: always use latest beta, pinned version, automerge",
-      "matchPackageNames": ["@audi2014/npmjs-test"],
       "matchBaseBranches": ["beta"],
-      "enabled": true,
       "automerge": true,
       "automergeType": "branch",
       "automergeStrategy": "merge",
+
+      "matchPackageNames": ["@audi2014/npmjs-test"],
       "schedule": ["at any time"],
       "minimumReleaseAge": "0 seconds",
       "prCreation": "immediate"
     },
     {
       "description": "Master branch: only stable releases, pinned version, manual merge",
-      "matchPackageNames": ["@audi2014/npmjs-test"],
       "matchBaseBranches": ["master"],
-      "ignoreUnstable": true,
       "automerge": false,
-      "prCreation": "not-pending"
+      "ignoreUnstable": true,
+
+      "matchPackageNames": ["@audi2014/npmjs-test"],
+      "schedule": ["at any time"],
+      "minimumReleaseAge": "0 seconds",
+      "prCreation": "immediate"
     }
   ]
 }
