--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "validate": "npx --yes --package renovate -- renovate-config-validator",
     "postinstall": "node -v",
     "test": "node index.js"
   },
