--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -7,7 +7,7 @@ on:
         description: 'Log level'
         required: false
 # ["trace", "debug", "info", "warn", "error", "fatal"]
-        default: 'warn'
+        default: 'info'
   repository_dispatch:
     types: [renovate-trigger]
   schedule:
@@ -27,6 +27,6 @@ jobs:
           configurationFile: renovate.json
           token: ${{ secrets.RENOVATE_TOKEN }}
         env:
-          LOG_LEVEL: ${{ github.event.inputs.logLevel || 'warn' }}
+          LOG_LEVEL: ${{ github.event.inputs.logLevel || 'info' }}
           RENOVATE_REPOSITORIES: ${{ github.repository }}
           RENOVATE_BASE_BRANCHES: ${{ github.event.client_payload.branch || github.ref_name }}
