--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,8 @@
   "constraints": {
     "node": "22"
   },
+  "prConcurrentLimit": 0,
+  "prHourlyLimit": 0,
   "baseBranchPatterns": ["master"],
   "packageRules": [
     {
