--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,8 @@
     {
       "description": "Beta branch: always use latest beta, pinned version, automerge",
       "matchBaseBranches": ["beta"],
+      "ignoreUnstable": false,
+      "respectLatest": false,
 
       "automerge": true,
       "platformAutomerge": true,
