--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -6,7 +6,7 @@ on:
       logLevel:
         description: 'Log level'
         required: false
-# ["trace", "debug", "info", "warn", "error", "fatal"]
+        # ["trace", "debug", "info", "warn", "error", "fatal"]
         default: 'debug'
   repository_dispatch:
     types: [renovate-trigger]
@@ -29,4 +29,4 @@ jobs:
         env:
           LOG_LEVEL: ${{ github.event.inputs.logLevel || 'debug' }}
           RENOVATE_REPOSITORIES: ${{ github.repository }}
-          RENOVATE_PACKAGE_RULES: ${{ github.event.client_payload.allowedVersions && format('[{{"matchPackageNames":["@audi2014/npmjs-test"],"allowedVersions":"{0}"}}]', github.event.client_payload.allowedVersions) || '[]' }}
+          RENOVATE_BASE_BRANCHES: ${{ github.event.client_payload.branch || github.ref_name }}
